# rust_wasm_backend_rust

./: Cargo.toml  README.md
src/: main.rs
src/repository/: ddb.rs
src/rest_api/: mod.rs  rest_get.rs  rest_post.rs
