[package]
name = "rust_wasm_backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.91"}
mysql = "*"
